<resources>
    <string name="app_name">Protocol</string>
    <string name="android_developer">Android Developer</string>
    <string name="web_developer">Web Developer</string>
    <string name="ios_developer">iOS Developer</string>
    <string name="analysis">Analysis</string>
    <string name="android_analysis">Android powers hundreds of millions of mobile devices in more than 190 countries around the world. It is the highest installed base of any mobile platform and growing fast. Everyday more than 1 million new Android devices are activated worldwide.</string>
    <string name="technologies">Technologies You Can Use</string>
    <string name="kotlin_recommended"><![CDATA[-> Kotlin (Recommended)]]></string>
    <string name="java"><![CDATA[-> Java]]></string>
    <string name="flutter_dart"><![CDATA[-> Flutter(Dart)]]></string>
    <string name="react_native"><![CDATA[-> React Native]]></string>
    <string name="patience"><![CDATA[-> Patience]]></string>
    <string name="tools_required">Tools Required</string>
    <string name="modern"><![CDATA[-> Modern]]></string>
    <string name="concise"><![CDATA[-> Concise]]></string>
    <string name="safe"><![CDATA[-> Safe]]></string>
    <string name="fianlVerdict"><![CDATA[-> Easy to pick up, so you can create powerful applications immediately.*]]></string>
    <string name="flutter_Analysis"><![CDATA[-> Flutter is an open-source UI software development kit created by Google. It is used to develop applications for Android, iOS, Linux, Mac, Windows, Google Fuchsia, and the web from a single codebase.]]></string>
    <string name="dart_Analysis"><![CDATA[-> Dart is the programming language used to code Flutter apps. Dart is another product by Google and released version 2.1, before Flutter, in November. As it is starting out, the Flutter community is not as extensive as ReactNative, Ionic, or Xamarin. Dart looks a bit like C and is an object-oriented programming language.]]></string>
    <string name="androidstudio_Anaylisis1">-> Android Studio is the official integrated development environment for Google\'s Android operating system, built on JetBrains IntelliJ IDEA software and designed specifically for Android development.</string>
    <string name="androidstudio_Anaylisis2">-> Android Studio provides a unified environment where you can build apps for Android phones, tablets, Android Wear, Android TV, and Android Auto. Structured code modules allow you to divide your project into units of functionality that you can independently build, test, and debug.</string>
    <string name="roadmap_overview">Roadmap/Overview</string>
    <string name="kotlin_analysis">Kotlin is a modern but already mature programming language aimed to make developers happier. It’s concise, safe, interoperable with Java and other languages, and provides many ways to reuse code between multiple platforms for productive programming. Pick it up to start building powerful applications!</string>
    <string name="credits_codewithharry">Credits:- Code With Harry</string>
    <string name="android_url">https://cdn.dribbble.com/users/2475489/screenshots/10958341/media/1a42f156117294570ccd94f0b79a7395.gif</string>
    <string name="ios_Url">https://cdn.dribbble.com/users/1161517/screenshots/7896076/media/24ae74ddb6c9eb7789ae3a189a6b30ae.gif</string>
    <string name="web_url">https://lh3.googleusercontent.com/proxy/outAmLr2o6CCxlRUxlhYdxi0gZrOeVgk7TPkHXuQTpWfPMRscIPx9_eovJV2EXd5x3Tc3NlaF_0Q0zMqX4XqA!QGb94pWg</string>
    <string name="kotlin">Kotlin</string>
    <string name="why_kotlin">Why Kotlin?🤔</string>
    <string name="aboutKotlin">A modern programming language that makes developers happier.</string>
    <string name="kotlin_gif_url">https://camo.githubusercontent.com/ed136aab3d149d8b3bd89cf68ae60abfc07d194ad6a652c9fbb45366d7227a21/68747470733a2f2f63646e2d696d616765732d312e6d656469756d2e636f6d2f6d61782f313630302f312a337831514533567a47354d576935516b36432d484c512e676966</string>
    <string name="Kotlin_Crash_Course">Kotlin Crash Course</string>
    <string name="kotlin_android_crashcourse">Kotlin Android-Crash Course</string>
    <string name="credits_traversy_media_philipp_lackner">Credits:- Traversy Media/Philipp Lackner</string>
    <string name="reasons_to_try_kotlin">Reasons To Try Kotlin😉</string>
    <string name="credits_android_authority">Credits:- Android Authority</string>
    <string name="credits_coding_blocks">Credits:- Coding Blocks</string>
    <string name="javatxt">Java</string>
    <string name="aboutJava">Java is a class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="java_Analysis">One of the most widely used programming languages, Java is used as the server-side language for most back-end development projects, including those involving big data and Android development. Java is also commonly used for desktop computing, other mobile computing, games, and numerical computing.</string>
    <string name="java_crash_course">Java Crash Course</string>
    <string name="java_android_crash_course">Java Android-Crash Course</string>
    <string name="credits_anuj_bhaiya">Credits:- Anuj Bhaiya</string>
    <string name="flutter">Flutter</string>
    <string name="fluuter_Analysis">Flutter SDK is Google\'s UI toolkit for crafting beautiful, natively compiled applications for mobile, web, and desktop from a single codebase.</string>
    <string name="things_you_need_to_know_about_flutter">Things You Need To Know About Flutter👇</string>
    <string name="flutter_crash_course">Flutter Crash Course</string>
    <string name="credits_freecodecamp">Credits:- FreeCodeCamp</string>
    <string name="dart_crash_course">Dart Crash Course</string>
    <string name="credits_hitesh_choudhary">Credits:- Hitesh Choudhary</string>
    <string name="reactNative">React Native lets you create truly native apps and doesn\'t compromise your users\' experiences.</string>
    <string name="reactNative_Analysis">React Native is an exciting framework that enables web developers to create robust mobile applications using their existing JavaScript knowledge. It offers faster mobile development, and more efficient code sharing across iOS, Android, and the Web, without sacrificing the end user\'s experience or application quality.</string>
    <string name="react_native_crash_course">React Native Crash Course</string>
    <string name="credits_programming_with_mosh">Credits:- Programming With Mosh</string>
    <string name="android_studio_txt">Android Studio</string>
    <string name="androidstudio_txt">Android Studio provides the fastest tools for building apps on every type of Android device.</string>
    <string name="installation_overview">Installation And Overview</string>
    <string name="ios_Analysis"><![CDATA[iOS application development is the process of making mobile applications for Apple hardware, including iPhone, iPad and iPod Touch. The software is written in the Swift programming language or Objective-C and then deployed to the App Store for users to download. If you’re a mobile app developer, you may have had reservations about iOS development. For example, each developer needs a Mac computer—and Macs are generally more expensive than their Windows-based counterparts. In addition, once you complete your app, it faces a stringent quality review process before it can be distributed through the App Store.]]></string>
    <string name="swift">-> Swift</string>
    <string name="objective_c">-> Objective C</string>
    <string name="react_native_txt">React Native</string>
    <string name="swift_txt">Swift</string>
    <string name="swift_Head">Swift is a general-purpose, multi-paradigm, compiled programming language developed by Apple Inc. and the open-source community.</string>
    <string name="swift_Analysis">Swift is a robust and intuitive programming language created by Apple for building apps for iOS, Mac, Apple TV and Apple Watch. It’s designed to give developers more freedom than ever. Swift is easy to use and open source, so anyone with an idea can create something incredible.</string>
    <string name="swift_crash_course">Swift Crash Course</string>
    <string name="objective_c_txt">Objective C</string>
    <string name="objC_Head">Objective-C is a general-purpose, object-oriented programming language that adds Smalltalk-style messaging to the C programming language.</string>
    <string name="objC_Analysis">Objective-C is the primary programming language you use when writing software for OS X and iOS. It’s a superset of the C programming language and provides object-oriented capabilities and a dynamic runtime. Objective-C inherits the syntax, primitive types, and flow control statements of C and adds syntax for defining classes and methods. It also adds language-level support for object graph management and object literals while providing dynamic typing and binding, deferring many responsibilities until runtime.</string>
    <string name="credits_derek_banas">Credits:- Derek Banas</string>
    <string name="xcode_Head">Xcode includes everything you need to create amazing apps for iPhone, iPad, Mac, Apple Watch, and Apple TV.</string>
    <string name="xcode_Analysis">A long-standing tool for app production, Xcode is a well-known integrated development environment (IDE), enabling developers to write the code and compile apps that can be used on various devices and operating systems. As Apple\'s own IDE, it is primarily used for the development of apps within its own ecosystem, though it can be used for writing source code in a variety of languages for use in other projects.</string>
    <string name="credits_codewithchris">Credits:- CodeWithChris</string>
    <string name="objectice_c_crash_course">Objectice C - Crash Course</string>
    <string name="xcode">XCode</string>
    <string name="installation_and_overview">Installation And OverView</string>
    <string name="xcode_txt"><![CDATA[-> XCode]]></string>
    <string name="web_development">Web Development</string>
    <string name="web_Head">Web development is the work involved in developing a Web site for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services.</string>
    <string name="credits_coder_coder">Credits:- Coder Coder</string>
    <string name="frontend_BackendAnalysis">-> Front End and Back End: Frontend and Backend are the two most popular terms used in web development. These terms are very crucial for web development but are quite different from each other. Each side needs to communicate and operate effectively with the other as a single unit to improve the website’s functionality.</string>
    <string name="roadmap">Roadmap</string>
    <string name="android_development_projects">Android Development Projects</string>
    <string name="web_development_projects">Web Development Projects</string>
    <string name="beginner_project_ideas">Beginner Project Ideas</string>
    <string name="tools_required_">Tools Required:-</string>
    <string name="programming_language"><![CDATA[-> Programming Language]]></string>
    <string name="pc_with_min_4gb_of_ram"><![CDATA[-> PC With Min 4GB Of RAM]]></string>
    <string name="android_studio"><![CDATA[-> Android Studio]]></string>
</resources>