<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".roadMap.iOSDevelopment.ObjectiveCFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="180dp"
            android:layout_height="29dp"
            android:layout_marginStart="@dimen/_9ssp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jetbrainsmonoextrabold"
            android:text="@string/objective_c_txt"
            android:textColor="@color/purple_500"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/objCGIF"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/kotlin_gif_url"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView2"
            app:layout_constraintStart_toEndOf="@+id/materialTextView2"
            app:layout_constraintTop_toTopOf="@+id/materialTextView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/jetbrainsmonobold"
            android:text="@string/objC_Head"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="@+id/materialTextView2"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView9"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/_9ssp"
            android:fontFamily="@font/jetbrainsmonoextrabold"
            android:text="@string/analysis"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView2"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="@+id/materialTextView2"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/jetbrainsmonobold"
            android:text="@string/objC_Analysis"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView9" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView11"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/jetbrainsmonoextrabold"
            android:gravity="center"
            android:text="@string/objectice_c_crash_course"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView10" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView11"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="@+id/materialTextView11"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView11">

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/ytView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:longClickable="false"
                app:videoId="5esQqZIJ83g"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:showYouTubeButton="true" />
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView15"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:fontFamily="@font/jetbrainsmonobold"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/credits_derek_banas"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@+id/scroll1"
            app:layout_constraintStart_toStartOf="@+id/scroll1"
            app:layout_constraintTop_toBottomOf="@+id/scroll1"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>