<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".projects.androidProjects.AndroidBeginnerProjects">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_9ssp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/jetbrainsmonoextrabold"
            android:text="@string/beginner_project_ideas"
            android:textColor="@color/purple_500"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/androidStudioGIF"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/kotlin_gif_url"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView2"
            app:layout_constraintStart_toEndOf="@+id/materialTextView2"
            app:layout_constraintTop_toTopOf="@+id/materialTextView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/jetbrainsmonoextrabold"
            android:text="@string/tools_required_"
            android:textColor="#676C6B"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView2"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/jetbrainsmonobold"
            android:text="@string/programming_language"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/materialTextView3"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/programmingLanguage_knowmore"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/readmore"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/materialTextView4"
            app:layout_constraintTop_toTopOf="@+id/materialTextView4"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/jetbrainsmonobold"
            android:text="@string/pc_with_min_4gb_of_ram"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/jetbrainsmonobold"
            android:text="@string/android_studio"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/materialTextView5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/androidStudio_knowmore"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/readmore"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView6"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@+id/materialTextView6"
            app:layout_constraintTop_toTopOf="@+id/materialTextView6"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/jetbrainsmonobold"
            android:text="@string/patience"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/materialTextView6"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7"
            tools:itemCount="10"
            tools:listitem="@layout/androidbeginnerprojects_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>