<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".projects.ProjectsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <soup.neumorphism.NeumorphCardView
            android:id="@+id/android_Projects"
            android:layout_width="304dp"
            android:layout_height="195dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/android_Projects_Image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_8sdp"
                android:contentDescription="@string/ios_Url" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="@dimen/_9ssp"
                android:fontFamily="@font/jetbrainsmonobold"
                android:text="@string/android_development_projects"
                android:textSize="21sp" />
        </soup.neumorphism.NeumorphCardView>
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/web_Projects"
            android:layout_width="304dp"
            android:layout_height="195dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/android_Projects">

            <ImageView
                android:id="@+id/web_Projects_Image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_8sdp"
                android:contentDescription="@string/ios_Url" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="@dimen/_9ssp"
                android:fontFamily="@font/jetbrainsmonobold"
                android:text="@string/web_development_projects"
                android:textSize="21sp" />
        </soup.neumorphism.NeumorphCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>